:hammer: Fixed the header on the front page to have more consistent height on the header. It shouldn't have tons of extra padding anymore.

--- a/devwp/sass/components/_backgrounds.scss
+++ b/devwp/sass/components/_backgrounds.scss
@@ -23,19 +23,18 @@ body {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 650px;
+  //height: 650px;
   position: relative;
+  padding-bottom: 120px;
 }
 
 @media screen and (min-width: 64em) {
   .background-desktop-adjust {
-    height: 900px;
+    padding-bottom: 20%;
   }
 }
 
-.full-background-xl {
-  height: 100vh;
-}
+
 
 
 //*********************************************
